--- a/src/stories/organisms/Header/header.css
+++ b/src/stories/organisms/Header/header.css
@@ -1,8 +1,10 @@
 #header {
   position: sticky;
+  background-color: white;
 }
 
 .wrapper {
+  position: sticky;
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding: 15px 20px;
