--- a/src/stories/pages/Play/play.css
+++ b/src/stories/pages/Play/play.css
@@ -1,3 +1,6 @@
+body {
+  background-color: black;
+}
 section {
   font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 14px;
