--- a/src/stories/organisms/CredentialCard/CredentialCard.css
+++ b/src/stories/organisms/CredentialCard/CredentialCard.css
@@ -5,6 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  
 }
 
 svg {
@@ -19,6 +20,7 @@ h1 {
   margin: 6px 0px 6px 10px;
   display: inline-block;
   vertical-align: top;
+  color: white;
 }
 
 button + button {
@@ -26,12 +28,13 @@ button + button {
 }
 
 .welcome {
-  color: #333;
+  color: white;
   font-size: 14px;
   margin-right: 10px;
 }
 
 .credential {
+  color: white;
   margin-bottom: 10px;
   position: relative;
 }
